--- a/index.html
+++ b/index.html
@@ -7,6 +7,61 @@
 	<link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body>
-	<div>Hello you</div>
+	<header>
+		<nav>
+			<li><a href="#contact">CONTACT</a></li>
+			<li><a href="#about">ABOUT</a></li>
+			<li><a href="#work">WORK</a></li>
+		</nav>
+	</header>
+
+<div id="main">
+	<section id="home">
+		<div class="wrapper">
+			<h3>SUNMI OH</h3>
+			<p>full stack web developer with a black belt</p>
+		</div><!-- .wrapper -->
+	</section><!-- #home -->
+
+	<section id="work">
+		<div class="work_container">
+			<div class="work_box">
+				<img src="images/photo_site.jpg" />
+			</div>
+			<div class="work_box">
+				<img src="images/tmtotxt.jpg" />
+			</div>
+			<div class="work_box">
+				<img src="images/retwitr.jpg" />
+			</div>
+			<div class="work_box">
+				<img src="images/tomatotxt.jpg" />
+			</div>
+		</div><!-- .work_container -->
+	</section><!-- #work -->
+
+	<section id="about">
+		<div id="about_container">
+			<h4>About Me</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div><!-- .about_container -->
+	</section><!-- #about -->
+
+	<section id="contact">
+		<div id="contact_container">
+			<h4>Contact</h4>
+				<li><a href="">LinkedIn</a></li>
+				<li><a href="https://github.com/ohsunmi" target="blank">Github</a></li>
+				<li><a href="https://twitter.com/whatupsun" target="blank">Twitter</a></li>
+				<li><a href="">Email</a></li>
+		</div><!-- .contact_container -->
+	</section><!-- #contact -->
+</div><!-- #main -->
 </body>
 </html>
