--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 	<section id="home">
 		<div id="bg"></div>
 		<div class="intro">
-			<h3>SUNMI OH</h3>
-			<p>full stack web developer with a black belt</p>
+			<h1>SUNMI OH</h1>
+			<p>full stack web developer</p>
 		</div><!-- .intro -->
 	</section><!-- #home -->
 
@@ -52,6 +52,10 @@
 			</p>
 		</div><!-- .about_container -->
 	</section><!-- #about -->
+
+	<div id="photo">
+		<p>photo</p>
+	</div><!-- #photo -->
 
 	<section id="contact">
 		<div id="contact_container">
