--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 	<section id="about">
 		<div id="about_container">
-			<h4>About Me</h4>
+			<h2>About</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -51,15 +51,16 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
 		</div><!-- .about_container -->
+
+		<div id="photo">
+			<p>photo</p>
+		</div><!-- #photo -->
 	</section><!-- #about -->
 
-	<div id="photo">
-		<p>photo</p>
-	</div><!-- #photo -->
 
 	<section id="contact">
 		<div id="contact_container">
-			<h4>Contact</h4>
+			<h2>Contact</h2>
 				<li><a href="">LinkedIn</a></li>
 				<li><a href="https://github.com/ohsunmi" target="blank">Github</a></li>
 				<li><a href="https://twitter.com/whatupsun" target="blank">Twitter</a></li>
