--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
 	<meta charset="utf-8">
 	<title>Sunmi Oh</title>
+	
 	<link rel="stylesheet" href="stylesheets/normalize.css">
 	<link rel="stylesheet" href="stylesheets/style.css">
+	
 </head>
 <body>
 	
@@ -28,7 +31,7 @@
 
 	<section id="home">
 		<div id="bg"></div>
-		<div class="intro">
+		<div class="intro box_shadow">
 			<h1>SUNMI OH</h1>
 			<p>full stack web developer</p>
 		</div><!-- .intro -->
@@ -41,14 +44,16 @@
 	</section><!-- #work -->
 
 	<section id="about">
-		<div id="about_container">
+		<div id="about_container" class="box_shadow">
 			<h2>About</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			consequat.
+			</p>
+			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			proident, sunt in culpa qui officia deserunt.
 			</p>
 		</div><!-- .about_container -->
 
@@ -61,10 +66,10 @@
 	<section id="contact">
 		<div id="contact_container">
 			<h2>Contact</h2>
-				<li><a href="">LinkedIn</a></li>
-				<li><a href="https://github.com/ohsunmi" target="blank">Github</a></li>
-				<li><a href="https://twitter.com/whatupsun" target="blank">Twitter</a></li>
-				<li><a href="">Email</a></li>
+				<li><a href="http://www.linkedin.com/profile/view?id=249118235&trk=nav_responsive_tab_profile_pic" target="blank">Linked<i class="fa fa-linkedin"></i></a></li>
+				<li><a href="https://github.com/ohsunmi" target="blank"><i class="fa fa-github"></i>Github</a></li>
+				<li><a href="https://twitter.com/whatupsun" target="blank"><i class="fa fa-twitter"></i>Twitter</a></li>
+				<li><a href="mailto:ohsun14@gmail.com"><i class="fa fa-envelope-o"></i>Email</a></li>
 		</div><!-- .contact_container -->
 	</section><!-- #contact -->
 
