--- a/index.html
+++ b/index.html
@@ -35,26 +35,38 @@
 			<h1>SUNMI OH</h1>
 			<p>full stack web developer</p>
 		</div><!-- .intro -->
+
+		<div id="arrow">
+			<i class="fa fa-chevron-down fa-3x"></i>
+		</div>
 	</section><!-- #home -->
 
 	<section id="work">
-		<div class="work_container">
+		<div id="work_container">
+			<div id="descriptions">
 
+				<div class="info box_shadow">
+					<p>My first project, a photography site that I built during my front-end web development class.</p>
+				</div>
+
+				<div class="info box_shadow">
+					<p>Tomatotxt is a web app that brings you curated movie recommendations via text message.</p>
+				</div>
+
+				<div class="info box_shadow">
+					<p>Retwitr provides the most popular and liked tweets of any desired twitter account.</p>
+				</div>
+
+			</div>
 		</div><!-- .work_container -->
 	</section><!-- #work -->
 
 	<section id="about">
 		<div id="about_container" class="box_shadow">
 			<h2>About</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat.
-			</p>
-			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt.
-			</p>
+			<p>I just graduated from General Assembly's Web Development Immersive course.  WDI is an intensive twelve-week program where we did nothing but code, learn code, learn some more code, and code again.  I had the opportunity to learn from some pretty awesome, highly knowledgable people and work amongst peers who were equally as awesome.</p>
+
+			<p>Before the course, I took another web development course that focused mostly on front-end.  I love creating things on the web and believe there is no end to learning in the world of programming.</p>
 		</div><!-- .about_container -->
 
 		<div id="photo">
@@ -75,6 +87,7 @@
 
 
 	<script src="javascripts/jquery.js"></script>
+	<script src="javascripts/jquery_easing.js"></script>
   <script src="javascripts/underscore.js"></script>
   <script src="javascripts/backbone.js"></script>
   <script src="javascripts/handlebars.js"></script>
