all content present

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 	<div id="bottom" class="border"></div>
 
 	<section id="home">
-		<div id="bg"></div>
 		<div class="intro box_shadow">
 			<h1>SUNMI OH</h1>
 			<p>full stack web developer</p>
@@ -46,15 +45,19 @@
 			<div id="descriptions">
 
 				<div class="info box_shadow">
-					<p>My first project, a photography site that I built during my front-end web development class.</p>
+					<a href="http://studio.generalassemb.ly/FEWD14/sunmioh/JennaKaplanPhotography/index.html" target="blank"><p>My first project, a photography site that I built during my front-end web development class.</p></a>
 				</div>
 
 				<div class="info box_shadow">
-					<p>Tomatotxt is a web app that brings you curated movie recommendations via text message.</p>
+					<a href="http://www.tomatotxt.com" target="blank"><p>Tomatotxt is a web app that brings you curated movie recommendations via text message.</p></a>
 				</div>
 
 				<div class="info box_shadow">
-					<p>Retwitr provides the most popular and liked tweets of any desired twitter account.</p>
+					<a href="http://retwitr.herokuapp.com" target="blank"><p>Retwitr provides the most popular and liked tweets of any desired twitter account.</p></a>
+				</div>
+
+				<div class="info box_shadow">
+					<a href="" target="blank"><p>TaskAlot manages your group's tasks and chores unlike any other task manager.</p></a>
 				</div>
 
 			</div>
@@ -64,7 +67,7 @@
 	<section id="about">
 		<div id="about_container" class="box_shadow">
 			<h2>About</h2>
-			<p>I just graduated from General Assembly's Web Development Immersive course.  WDI is an intensive twelve-week program where we did nothing but code, learn code, learn some more code, and code again.  I had the opportunity to learn from some pretty awesome, highly knowledgable people and work amongst peers who were equally as awesome.</p>
+			<p>I recently graduated from General Assembly's Web Development Immersive course.  WDI is an intensive twelve-week program where we learned front and back end development including RoR, JavaScript, jQuery, Backbone, AJAX, PostgreSQL, as well as different testing tools.  I had the opportunity to learn from some pretty awesome, highly knowledgable people and work among peers who were equally as awesome.</p>
 
 			<p>Before the course, I took another web development course that focused mostly on front-end.  I love creating things on the web and believe there is no end to learning in the world of programming.</p>
 		</div><!-- .about_container -->
@@ -78,10 +81,12 @@
 	<section id="contact">
 		<div id="contact_container">
 			<h2>Contact</h2>
-				<li><a href="http://www.linkedin.com/profile/view?id=249118235&trk=nav_responsive_tab_profile_pic" target="blank">Linked<i class="fa fa-linkedin"></i></a></li>
-				<li><a href="https://github.com/ohsunmi" target="blank"><i class="fa fa-github"></i>Github</a></li>
-				<li><a href="https://twitter.com/whatupsun" target="blank"><i class="fa fa-twitter"></i>Twitter</a></li>
-				<li><a href="mailto:ohsun14@gmail.com"><i class="fa fa-envelope-o"></i>Email</a></li>
+			<div id="icons">
+				<li><a href="http://www.linkedin.com/profile/view?id=249118235&trk=nav_responsive_tab_profile_pic" target="blank"><i class="fa fa-linkedin"></i></a></li>
+				<li><a href="https://github.com/ohsunmi" target="blank"><i class="fa fa-github"></i></a></li>
+				<li><a href="https://twitter.com/whatupsun" target="blank"><i class="fa fa-twitter"></i></a></li>
+				<li><a title="ohsun14@gmail.com" href="mailto:ohsun14@gmail.com"><i class="fa fa-envelope-o"></i></a></li>
+			</div><!-- #icons -->
 		</div><!-- .contact_container -->
 	</section><!-- #contact -->
 
