--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
 		<div id="work_container">
 			<div id="descriptions">
 
-				<div class="info box_shadow">
-					<a href="http://studio.generalassemb.ly/FEWD14/sunmioh/JennaKaplanPhotography/index.html" target="blank"><p>My first project, a photography site that I built during my front-end web development class.</p></a>
+				<div id="info_a" class="info box_shadow">
+					<p>My first project: a photography site that I built during my front-end web development class. <a href="http://studio.generalassemb.ly/FEWD14/sunmioh/JennaKaplanPhotography/index.html" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
 				</div>
 
-				<div class="info box_shadow">
-					<a href="http://www.tomatotxt.com" target="blank"><p>Tomatotxt is a web app that brings you curated movie recommendations via text message.</p></a>
+				<div id="info_b" class="info box_shadow">
+					<p>Tomatotxt is a web app that brings you curated movie recommendations via text message. <a href="http://www.tomatotxt.com" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
 				</div>
 
-				<div class="info box_shadow">
-					<a href="http://retwitr.herokuapp.com" target="blank"><p>Retwitr provides the most popular and liked tweets of any desired twitter account.</p></a>
+				<div id="info_c" class="info box_shadow">
+					<p>Retwitr provides the most popular and liked tweets of any desired twitter account. <a href="http://retwitr.herokuapp.com" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
 				</div>
 
-				<div class="info box_shadow">
-					<a href="" target="blank"><p>TaskAlot manages your group's tasks and chores unlike any other task manager.</p></a>
+				<div id="info_d" class="info box_shadow">
+					<p>TaskAlot manages your group's tasks and chores unlike any other task manager. <a href="" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
 				</div>
 
 			</div>
@@ -67,9 +67,9 @@
 	<section id="about">
 		<div id="about_container" class="box_shadow">
 			<h2>About</h2>
-			<p>I recently graduated from General Assembly's Web Development Immersive course.  WDI is an intensive twelve-week program where we learned front and back end development including RoR, JavaScript, jQuery, Backbone, AJAX, PostgreSQL, as well as different testing tools.  I had the opportunity to learn from some pretty awesome, highly knowledgable people and work among peers who were equally as awesome.</p>
+			<p>I recently graduated from General Assembly's Web Development Immersive course.  WDI is an intensive twelve-week program where we learned front and back end development including RoR, JavaScript, jQuery, Backbone, AJAX, PostgreSQL, as well as different testing tools.  I had the opportunity to learn from several talented, highly knowledgable people and work among peers who were equally as awesome.</p>
 
-			<p>Before the course, I took another web development course that focused mostly on front-end.  I love creating things on the web and believe there is no end to learning in the world of programming.</p>
+			<p>Before the course, I took another web development course that focused mostly on front-end.  I love creating things on the web and am eager to learn and expand my skills even further.</p>
 		</div><!-- .about_container -->
 
 		<div id="photo">
