main/index html

--- a/index.html
+++ b/index.html
@@ -1,109 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
-	<meta charset="utf-8">
-	<title>Sunmi Oh</title>
-	
-	<link rel="stylesheet" href="stylesheets/normalize.css">
-	<link rel="stylesheet" href="stylesheets/style.css">
-	
+	<title></title>
+		<link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body>
-	
-	<script id="project-view-template" type="text/x-handlebars-template">
-		<div class="work_images"><img {{image}} /></div>
-	</script>
-
-
-	<header>
-		<nav>
-			<li><a href="#contact">CONTACT</a></li>
-			<li><a href="#about">ABOUT</a></li>
-			<li><a href="#work">WORK</a></li>
-		</nav>
-	</header>
-
-	<div id="left" class="border"></div>
-	<div id="right" class="border"></div>
-	<div id="top" class="border"></div>
-	<div id="bottom" class="border"></div>
-
-	<section id="home">
-		<div class="intro box_shadow">
-			<h1>SUNMI OH</h1>
-			<p>full stack web developer</p>
-		</div><!-- .intro -->
-
-		<div id="arrow">
-			<i class="fa fa-chevron-down fa-3x"></i>
-		</div>
-	</section><!-- #home -->
-
-	<section id="work">
-		<div id="work_container">
-			<div id="descriptions">
-
-				<div id="info_a" class="info box_shadow">
-					<p>My first project: a photography site that I built during my front-end web development class. <a href="http://studio.generalassemb.ly/FEWD14/sunmioh/JennaKaplanPhotography/index.html" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
-				</div>
-
-				<div id="info_b" class="info box_shadow">
-					<p>Tomatotxt is a web app that brings you curated movie recommendations via text message. <a href="http://www.tomatotxt.com" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
-				</div>
-
-				<div id="info_c" class="info box_shadow">
-					<p>Retwitr provides the most popular and liked tweets of any desired twitter account. <a href="http://retwitr.herokuapp.com" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
-				</div>
-
-				<div id="info_d" class="info box_shadow">
-					<p>TaskAlot manages your group's tasks and chores unlike any other task manager. <a href="" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
-				</div>
-
-			</div>
-		</div><!-- .work_container -->
-	</section><!-- #work -->
-
-	<section id="about">
-		<div id="about_container" class="box_shadow">
-			<h2>About</h2>
-			<p>I recently graduated from General Assembly's Web Development Immersive course.  WDI is an intensive twelve-week program where we learned front and back end development including RoR, JavaScript, jQuery, Backbone, AJAX, PostgreSQL, as well as different testing tools.  I had the opportunity to learn from several talented, highly knowledgable people and work among peers who were equally as awesome.</p>
-
-			<p>Before the course, I took another web development course that focused mostly on front-end.  I love creating things on the web and am eager to learn and expand my skills even further.</p>
-		</div><!-- .about_container -->
-
-		<div id="photo">
-			<p>photo</p>
-		</div><!-- #photo -->
-	</section><!-- #about -->
-
-
-	<section id="contact">
-		<div id="contact_container">
-			<h2>Contact</h2>
-			<div id="icons">
-				<li><a href="http://www.linkedin.com/profile/view?id=249118235&trk=nav_responsive_tab_profile_pic" target="blank"><i class="fa fa-linkedin"></i></a></li>
-				<li><a href="https://github.com/ohsunmi" target="blank"><i class="fa fa-github"></i></a></li>
-				<li><a href="https://twitter.com/whatupsun" target="blank"><i class="fa fa-twitter"></i></a></li>
-				<li><a title="ohsun14@gmail.com" href="mailto:ohsun14@gmail.com"><i class="fa fa-envelope-o"></i></a></li>
-			</div><!-- #icons -->
-		</div><!-- .contact_container -->
-	</section><!-- #contact -->
-
-
-	<script src="javascripts/jquery.js"></script>
-	<script src="javascripts/jquery_easing.js"></script>
-  <script src="javascripts/underscore.js"></script>
-  <script src="javascripts/backbone.js"></script>
-  <script src="javascripts/handlebars.js"></script>
-
-  <script src="javascripts/backbone/models/Project.js"></script>
-  <script src="javascripts/backbone/collections/Projects.js"></script>
-  <script src="javascripts/backbone/views/ProjectView.js"></script>
-  <script src="javascripts/backbone/routers/Router.js"></script>
-	<script src="javascripts/backbone/app.js"></script>
-
-  <script src="javascripts/scripts.js"></script>
-
+	<div id="construction" class="box_shadow">
+		<p>Under Construction...</p>
+		<p>check back soon!</p>
+	</div>
 </body>
 </html>
