--- a/index.html
+++ b/index.html
@@ -46,18 +46,26 @@
 
 				<div id="info_a" class="info box_shadow">
 					<p>My first project: a photography site that I built during my front-end web development class. <a href="http://studio.generalassemb.ly/FEWD14/sunmioh/JennaKaplanPhotography/index.html" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
+					<br>
+					<p>HTML5. CSS3. jQuery Fancybox. </p>
 				</div>
 
 				<div id="info_b" class="info box_shadow">
 					<p>Tomatotxt is a web app that brings you curated movie recommendations via text message. <a href="http://www.tomatotxt.com" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
+					<br>
+					<p>Rails 3. PostgreSQL. Devise. Twilio. RottenTomatoes API. OMDBapi.</p>
 				</div>
 
 				<div id="info_c" class="info box_shadow">
 					<p>Retwitr provides the most popular and liked tweets of any desired twitter account. <a href="http://retwitr.herokuapp.com" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
+					<br>
+					<p>Rails 3. PostgreSQL. Twitter API. OmniAuth. Devise.</p>
 				</div>
 
 				<div id="info_d" class="info box_shadow">
 					<p>TaskAlot manages your group's tasks and chores unlike any other task manager. <a href="" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
+					<br>
+					<p>Rails 4. Devise. PostgreSQL. SendGrid. Twilio.</p>
 				</div>
 
 			</div>
