minor css adjustments

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div id="info_a" class="info box_shadow">
 					<p>My first project: a photography site that I built during my front-end web development class. <a href="http://studio.generalassemb.ly/FEWD14/sunmioh/JennaKaplanPhotography/index.html" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
 					<br>
-					<p>HTML5. CSS3. jQuery Fancybox. </p>
+					<p>HTML5. CSS3. jQuery Fancybox.</p>
 				</div>
 
 				<div id="info_b" class="info box_shadow">
@@ -59,7 +59,7 @@
 				<div id="info_c" class="info box_shadow">
 					<p>Retwitr provides the most popular and liked tweets of any desired twitter account. <a href="http://retwitr.herokuapp.com" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
 					<br>
-					<p>Rails 3. PostgreSQL. Twitter API. OmniAuth. Devise.</p>
+					<p>Rails 3. PostgreSQL. Devise. Twitter API. OmniAuth.</p>
 				</div>
 
 				<div id="info_d" class="info box_shadow">
