--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<div id="info_b" class="info box_shadow">
 					<p>Tomatotxt is a web app that brings you curated movie recommendations via text message. <a href="http://www.tomatotxt.com" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
 					<br>
-					<p>Rails 3. PostgreSQL. Devise. Twilio. RottenTomatoes API. OMDBapi.</p>
+					<p>Rails 3. PostgreSQL. Devise. Twilio. RottenTomatoes API. OMDb API. TheMovieDB API</p>
 				</div>
 
 				<div id="info_c" class="info box_shadow">
