--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div id="info_a" class="info box_shadow">
 					<p>My first project: a photography site that I built during my front-end web development class. <a href="http://studio.generalassemb.ly/FEWD14/sunmioh/JennaKaplanPhotography/index.html" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
 					<br>
-					<p>HTML5. CSS3. jQuery Fancybox.</p>
+					<p>HTML5. CSS3. <br>jQuery Fancybox.</p>
 				</div>
 
 				<div id="info_b" class="info box_shadow">
@@ -59,13 +59,13 @@
 				<div id="info_c" class="info box_shadow">
 					<p>Retwitr provides the most popular and liked tweets of any desired twitter account. <a href="http://retwitr.herokuapp.com" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
 					<br>
-					<p>Rails 3. PostgreSQL. Devise. Twitter API. OmniAuth.</p>
+					<p>Rails 3. PostgreSQL. Devise. OmniAuth. Twitter API.</p>
 				</div>
 
 				<div id="info_d" class="info box_shadow">
 					<p>TaskAlot manages your group's tasks and chores unlike any other task manager. <a href="" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
 					<br>
-					<p>Rails 4. Devise. PostgreSQL. SendGrid. Twilio.</p>
+					<p>Rails 4. PostgreSQL. Devise. SendGrid. Twilio.</p>
 				</div>
 
 			</div>
