--- a/index.html
+++ b/index.html
@@ -45,26 +45,34 @@
 			<div id="descriptions">
 
 				<div id="info_a" class="info box_shadow">
-					<p>My first project: a photography site that I built during my front-end web development class. <a href="http://studio.generalassemb.ly/FEWD14/sunmioh/JennaKaplanPhotography/index.html" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
-					<br>
+					<p>My first project: a photography site that I built during my front-end web development class.
+						<br>
+						<a href="http://studio.generalassemb.ly/FEWD14/sunmioh/JennaKaplanPhotography/index.html" target="blank"><i class="fa fa-angle-double-right"></i></a>
+					</p>
 					<p>HTML5. CSS3. <br>jQuery Fancybox.</p>
 				</div>
 
 				<div id="info_b" class="info box_shadow">
-					<p>Tomatotxt is a web app that brings you curated movie recommendations via text message. <a href="http://www.tomatotxt.com" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
-					<br>
+					<p>Tomatotxt is a web app that brings you curated movie recommendations via text message.
+						<br>
+						<a href="http://www.tomatotxt.com" target="blank"><i class="fa fa-angle-double-right"></i></a>
+					</p>
 					<p>Rails 3. PostgreSQL. Devise. Twilio. RottenTomatoes API. OMDb API. TheMovieDB API</p>
 				</div>
 
 				<div id="info_c" class="info box_shadow">
-					<p>Retwitr provides the most popular and liked tweets of any desired twitter account. <a href="http://retwitr.herokuapp.com" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
-					<br>
+					<p>Retwitr provides the most popular and liked tweets of any desired twitter account.
+						<br>
+						<a href="http://retwitr.herokuapp.com" target="blank"><i class="fa fa-angle-double-right"></i></a>
+					</p>
 					<p>Rails 3. PostgreSQL. Devise. OmniAuth. Twitter API.</p>
 				</div>
 
 				<div id="info_d" class="info box_shadow">
-					<p>TaskAlot manages your group's tasks and chores unlike any other task manager. <a href="" target="blank"><i class="fa fa-angle-double-right"></i></a></p>
-					<br>
+					<p>TaskAlot manages your group's tasks and chores through instant task allocation and acceptance. 
+						<br>
+						<a href="" target="blank"><i class="fa fa-angle-double-right"></i></a>
+					</p>
 					<p>Rails 4. PostgreSQL. Devise. SendGrid. Twilio.</p>
 				</div>
 
