about me change

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<br>
 						<a href="http://www.tomatotxt.com" target="blank"><i class="fa fa-angle-double-right"></i></a>
 					</p>
-					<p>Rails 3. PostgreSQL. Devise. Twilio. RottenTomatoes API. OMDb API. TheMovieDB API</p>
+					<p>Rails 3. PostgreSQL. Devise. Twilio. RottenTomatoes API. OMDbAPI. TheMovieDB API</p>
 				</div>
 
 				<div id="info_c" class="info box_shadow">
@@ -83,9 +83,11 @@
 	<section id="about">
 		<div id="about_container" class="box_shadow">
 			<h2>About</h2>
-			<p>I recently graduated from General Assembly's Web Development Immersive course.  WDI is an intensive twelve-week program where we learned front and back end development including RoR, JavaScript, jQuery, Backbone, PostgreSQL, as well as different testing tools.  I had the opportunity to learn from several talented, highly knowledgable people and work among peers who were equally as awesome.</p>
+			<p>After taking a front-end web development course at General Assembly, I was able to quickly translate my creative ideas to the screen.  However, I recognized the limitations I faced in order to create something at a larger scale.  So, I dove straight into an immersive full-stack web development program.</p>
 
-			<p>Before the course, I took another web development course that focused mostly on front-end.  I love creating things on the web and am eager to learn and expand my skills even further.</p>
+			<p>I became even more experienced with front-end development in addition to back-end technologies including Ruby on Rails, JavaScript, jQuery, Backbone, PostgreSQL, and various testing tools.  I had the opportunity to learn from several talented, highly knowledgable people and work among peers who were equally as awesome.</p>
+
+			<p>I love creating things on the web and am eager to learn and expand my skills to no end.</p>
 		</div><!-- .about_container -->
 
 		<div id="photo">
