--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 	<section id="work">
 		<div id="work_container">
 			<div id="descriptions">
-
 				<div id="info_a" class="info box_shadow">
 					<p>My first project: a photography site that I built during my front-end web development class.
 						<br>
@@ -51,7 +50,6 @@
 					</p>
 					<p>HTML5. CSS3. <br>jQuery Fancybox.</p>
 				</div>
-
 				<div id="info_b" class="info box_shadow">
 					<p>Tomatotxt is a web app that brings you curated movie recommendations via text message.
 						<br>
@@ -59,7 +57,6 @@
 					</p>
 					<p>Rails 3. PostgreSQL. Devise. Twilio. RottenTomatoes API. OMDbAPI. TheMovieDB API</p>
 				</div>
-
 				<div id="info_c" class="info box_shadow">
 					<p>Retwitr provides the most popular and liked tweets of any desired twitter account.
 						<br>
@@ -67,7 +64,6 @@
 					</p>
 					<p>Rails 3. PostgreSQL. Devise. OmniAuth. Twitter API.</p>
 				</div>
-
 				<div id="info_d" class="info box_shadow">
 					<p>TaskAlot manages your group's tasks and chores through instant task allocation and acceptance. 
 						<br>
@@ -75,8 +71,7 @@
 					</p>
 					<p>Rails 4. PostgreSQL. Devise. SendGrid. Twilio.</p>
 				</div>
-
-			</div>
+			</div><!-- #descriptions -->
 		</div><!-- .work_container -->
 	</section><!-- #work -->
 
