remove mobile info fades

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<section id="about">
 		<div id="about_container" class="box_shadow">
 			<h2>About</h2>
-			<p>After taking a front-end web development course at General Assembly, I was able to quickly translate my creative ideas to the screen.  However, I recognized the limitations I faced in order to create something at a larger scale.  So, I dove straight into an immersive full-stack web development program.</p>
+			<p>Taking a front-end web development course at General Assembly, I was able to quickly translate my creative ideas to the screen.  However, I recognized the limitations I faced in creating something at a larger scale.  So, I dove straight into an immersive full-stack web development program.</p>
 
 			<p>I became even more experienced with front-end development in addition to back-end technologies including Ruby on Rails, JavaScript, jQuery, Backbone, PostgreSQL, and various testing tools.  I had the opportunity to learn from several talented, highly knowledgable people and work among peers who were equally as awesome.</p>
 
