--- a/index.html
+++ b/index.html
@@ -46,28 +46,28 @@
 				<div id="info_a" class="info box_shadow">
 					<p>My first project: a photography site that I built during my front-end web development class.
 						<br>
-						<a href="http://studio.generalassemb.ly/FEWD14/sunmioh/JennaKaplanPhotography/index.html" target="blank"><i class="fa fa-angle-double-right"></i></a>
+						<a href="http://studio.generalassemb.ly/FEWD14/sunmioh/JennaKaplanPhotography/index.html" target="_blank"><i class="fa fa-angle-double-right"></i></a>
 					</p>
 					<p>HTML5. CSS3. <br>jQuery Fancybox.</p>
 				</div>
 				<div id="info_b" class="info box_shadow">
 					<p>Tomatotxt is a web app that brings you curated movie recommendations via text message.
 						<br>
-						<a href="http://tmtotxt.herokuapp.com/" target="blank"><i class="fa fa-angle-double-right"></i></a>
+						<a href="http://tmtotxt.herokuapp.com/" target="_blank"><i class="fa fa-angle-double-right"></i></a>
 					</p>
 					<p>Rails 3. PostgreSQL. Devise. Twilio. RottenTomatoes API. OMDbAPI. TheMovieDB API</p>
 				</div>
 				<div id="info_c" class="info box_shadow">
 					<p>Retwitr provides the most popular and liked tweets of any desired twitter account.
 						<br>
-						<a href="http://retwitr.herokuapp.com" target="blank"><i class="fa fa-angle-double-right"></i></a>
+						<a href="http://retwitr.herokuapp.com" target="_blank"><i class="fa fa-angle-double-right"></i></a>
 					</p>
 					<p>Rails 3. PostgreSQL. Devise. OmniAuth. Twitter API.</p>
 				</div>
 				<div id="info_d" class="info box_shadow">
 					<p>TaskAlot manages your group's tasks and chores through instant task allocation and acceptance. 
 						<br>
-						<a href="" target="blank"><i class="fa fa-angle-double-right"></i></a>
+						<a href="" target="_blank"><i class="fa fa-angle-double-right"></i></a>
 					</p>
 					<p>Rails 4. PostgreSQL. Devise. SendGrid. Twilio.</p>
 				</div>
@@ -95,9 +95,9 @@
 		<div id="contact_container">
 			<h2>Contact</h2>
 			<div id="icons">
-				<li><a href="http://www.linkedin.com/profile/view?id=249118235&trk=nav_responsive_tab_profile_pic" target="blank"><i class="fa fa-linkedin"></i></a></li>
-				<li><a href="https://github.com/ohsunmi" target="blank"><i class="fa fa-github"></i></a></li>
-				<li><a href="https://twitter.com/whatupsun" target="blank"><i class="fa fa-twitter"></i></a></li>
+				<li><a href="http://www.linkedin.com/profile/view?id=249118235&trk=nav_responsive_tab_profile_pic" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+				<li><a href="https://github.com/ohsunmi" target="_blank"><i class="fa fa-github"></i></a></li>
+				<li><a href="https://twitter.com/whatupsun" target="_blank"><i class="fa fa-twitter"></i></a></li>
 				<li><a title="ohsun14@gmail.com" href="mailto:ohsun14@gmail.com"><i class="fa fa-envelope-o"></i></a></li>
 			</div><!-- #icons -->
 		</div><!-- .contact_container -->
