change word in info

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<p>Rails 3. PostgreSQL. Devise. Twilio. RottenTomatoes API. OMDbAPI. TheMovieDB API</p>
 				</div>
 				<div id="info_c" class="info box_shadow">
-					<p>Retwitr provides the most popular and liked tweets of any desired twitter account.
+					<p>Retwitr provides the most popular and liked tweets of any desired twitter handle.
 						<br>
 						<a href="http://retwitr.herokuapp.com" target="_blank"><i class="fa fa-angle-double-right"></i></a>
 					</p>
