added taskalot link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<div id="info_d" class="info box_shadow">
 					<p>TaskAlot manages your group's tasks and chores through instant task allocation and acceptance. 
 						<br>
-						<a href="" target="_blank"><i class="fa fa-angle-double-right"></i></a>
+						<a href="http://taskalotsplash.herokuapp.com/" target="_blank"><i class="fa fa-angle-double-right"></i></a>
 					</p>
 					<p>Rails 4. PostgreSQL. Devise. SendGrid. Twilio.</p>
 				</div>
